Bug 1744807 - Retry camera 200ms after failure to start once, like we do for mics, to assist frequent front/back flipping on some phones r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D135280